# pld-comp

./: .gitignore  CMakeLists.txt  ExternalAntlr4Cpp.cmake  README.md  input.c  input.s  wrapper.sh
.github/workflows/: c-cpp.yml
demo/: beer.c  fact-simple.c  factoriel.c  lagaf.c  odd.c
src/: ASSM.cpp  ASSM.h  AST.cpp  AST.h  CompVisitor.cpp  CompVisitor.h  Logger.cpp  Logger.h  TagManager.h  TmpVariable.h  Variable.cpp  Variable.h  VariableManager.cpp  VariableManager.h  main.cpp
src/antlr/: IFCC.cpp  IFCC.g4  IFCC.h  IFCC.interp  IFCC.tokens  IFCCBaseVisitor.cpp  IFCCBaseVisitor.h  IFCCLexer.cpp  IFCCLexer.g4  IFCCLexer.h  IFCCLexer.interp  IFCCLexer.tokens  IFCCParser.cpp  IFCCParser.g4  IFCCParser.h  IFCCParser.interp  IFCCParser.tokens  IFCCParserBaseVisitor.cpp  IFCCParserBaseVisitor.h  IFCCParserVisitor.cpp  IFCCParserVisitor.h  IFCCVisitor.cpp  IFCCVisitor.h
test/: AssignmentByVariableTest.test.yml  DoubleAffectation.test.yml  ErrorAssignmentNonDeclaredVariable.test.yml  MultiVariableDeclaration.test.yml  SimpleAssignmentTest.test.yml  SimpleMultiplication.test.yml  SimpleReturnTest.test.yml  TwoVariablesMultiplication.test.yml
test/arithmetic/: ComplexOperations.test.yml  SimpleMultiplication.test.yml  TwoVariablesMultiplication.test.yml
test/assignment-and-declaration/: AssignmentByVariableTest.test.yml  DoubleAffectation.test.yml  ErrorAssignmentNonDeclaredVariable.test.yml  ErrorUndefinedVariable.test.yml  ErrorVariableAlreadyDeclared.test.yml  MultiVariableDeclaration.test.yml  SimpleAffectation.test.yml  SimpleAssignmentTest.test.yml  SimpleReturnTest.test.yml
test/block/: CreateMultipleScopedVariableWithSameName.test.yml
test/char/: CharValueLiteral.test.yml  CharValueLiteralAddition.test.yml  CharValueLiteralIncrement.test.yml  CharValueVariable.test.yml
test/if/: IFWithBlockBody.test.yml  IFWithEqualityCondition.test.yml  NestedIF.test.yml  NestedIFELSE.test.yml  SimpleIF1.test.yml  SimpleIF2.test.yml
(+80 files in other folders)
